--- a/PrácticaFinal/templates/pagina_principal.html
+++ b/PrácticaFinal/templates/pagina_principal.html
@@ -1,4 +1,26 @@
 {% extends "index.html" %}
 
+{% block menu %}
+<ul>
+   <a href="/museos"><li> Todos </li></a>
+   <a href="/about"><li> About </li></a>
+   <a href="/{{user.username}}"><li>Página personal</li></a>
+   <a href="/{{user.username}}/xml"><li>XML usuario</li></a>
+   <a href="/rss"><li>Canal RSS </li></a>
+</ul>
+{% endblock %}
 
 
+{% block contenido %}
+
+<div id="primarycontainer">
+   {% if cargar %}
+      <form method="post" action="/">
+           <input class="cargar" type="submit" value="Cargar museos" name="cargar">
+      </form>
+ <h3>Si desea cargar el XML con el contenido de esta página&nbsp<a href="/museos">pulse aquí</a></h3>
+   {% endif %}
+</div>
+
+
+{% endblock %}
