--- a/PrácticaFinal/templates/museos.html
+++ b/PrácticaFinal/templates/museos.html
@@ -8,6 +8,7 @@
   <a href="/{{user.username}}"><li>Página personal</li></a>
   <a href="/{{user.username}}/xml"><li>XML usuario</li></a>
   <a href="/rss"><li>Canal RSS </li></a>
+  <a href="/visitados"><li>Más visitados</li></a>
 </ul>
 {% endblock %}
 
