En la página principal aparecen los 5 más comentados

--- a/PrácticaFinal/templates/pagina_museo.html
+++ b/PrácticaFinal/templates/pagina_museo.html
@@ -87,7 +87,7 @@
          <h2>Introduce tu comentario:</h2>
             <form method="post" action="/museos/{{ museo.idmuseo }}">
             <input class="comentario" value="{{ form.texto }}" name="texto"><br>
-            <input type="submit" value="Enviar">
+            <input type="submit" value="Añadir comentario">
          </form>
      {% endif %}
   </div>
