--- a/PrácticaFinal/templates/pagina_principal.html
+++ b/PrácticaFinal/templates/pagina_principal.html
@@ -18,7 +18,19 @@
       <form method="post" action="/">
            <input class="cargar" type="submit" value="Cargar museos" name="cargar">
       </form>
- <h3>Si desea cargar el XML con el contenido de esta página&nbsp<a href="/museos">pulse aquí</a></h3>
+   {% else %}
+      <h2>Museos más comentados:</h2>
+      {% for coment in museos_comentados %}
+           {% if coment.num_com > 0 %}
+               <h1><a href="{{ coment.content_URL }}">{{ coment.nombre }}
+               </a></h1><p>{{ coment.clase_via }} {{ coment.nombre_via }},
+               {{ coment.numero}} </p>
+               <p class="date">
+               <a href="/museos/{{ coment.idmuseo }}">Más información
+               </a></p><br />
+           {% endif %}
+      {% endfor %}
+      <h3>Si desea cargar el XML con el contenido de esta página&nbsp<a href="/pagina_xml">pulse aquí</a></h3>
    {% endif %}
 </div>
 
