--- a/PrácticaFinal/templates/pagina_usuario.html
+++ b/PrácticaFinal/templates/pagina_usuario.html
@@ -45,10 +45,7 @@
    {% if usuario_ == user.username %}
       <div class="box">
        <h4>Inserta el título que desees para tu página</h4>
-       <form method="POST" action="/cambiar_titulo"> 
-<!--
-		   crear función para cambiar el título!!!!!
--->
+       <form method="POST"> 
        {% csrf_token %}
        <input type="text" name="titulo" /><br/>
        <input type="submit" value="Cambiar" />
