--- a/PrácticaFinal/templates/index.html
+++ b/PrácticaFinal/templates/index.html
@@ -5,6 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<link href="templates/styles.css" rel="stylesheet" type="text/css">
+	<link rel="shotcut icon" type="image/jpeg" href="{%static 'favicon.ico' %}" />
 </head>
 
 <body>
