--- a/PrácticaFinal/templates/index.html
+++ b/PrácticaFinal/templates/index.html
@@ -19,7 +19,7 @@
   	<div id="header">
   		<div id="headercontent">
   			<h1>MuseosMadrid</h1>
-			<img id = "banner" src = "{%static 'images.png' %}"/><sup><h1>¡Encuentra el museo que buscas!</h1></sup>
+			<img id = "banner" src = "{%static 'imagen.jpg' %}"/><sup><h1>¡Encuentra el museo que buscas!</h1></sup>
   		</div>
   	</div>
 
