--- a/PrácticaFinal/templates/styles.css
+++ b/PrácticaFinal/templates/styles.css
@@ -9,6 +9,10 @@ body {
 	color: #154789;
 	background-color:{{ color|default:'#123456' }};
 	}
+	
+header {
+	height:400px;
+}
 #pie_pagina{
     position: relative;
     width:100%;
@@ -149,9 +153,111 @@ h2 {
 	padding: 0 0 10px 0;
 	
 }
+
+#contenido
+{
+padding: 0em 2.0em 0em 2.0em;
+background-color: inherit;;
+}
+
+
+#primarycontainer
+{
+float: left;
+margin-right: -18.0em;
+width: 100%;
+background-color: inherit;
+}
+
 #normalcontent .titulo
 {
 text-transform: uppercase;
 font-size: 2;
 color: #48D1CC;
+}
+#primarycontent
+{
+margin: 1.5em 22.0em 0em 0em;
+background-color: inherit;
+}
+
+#secondarycontent
+{
+margin-top: 2.5em;
+float: right;
+width: 18.0em;
+background-color: inherit;
+}
+
+
+#arriba_derecha
+{
+position: absolute;
+top: 3.0em;
+right: 2.0em;
+padding-right: 0.0em;
+color: #48D1CC;
+}
+
+#arriba_derecha input.text
+{
+margin-right: 0.5em;
+vertical-align: middle;
+border-top: solid 1px #000000;
+border-right: 0px;
+border-bottom: solid 1px #777777;
+border-left: 0px;
+padding: 0.15em;
+width: 10.0em;
+}
+
+
+a img {
+	border: none;
+}
+
+
+p {
+	font-size: {{letra}};
+	
+}
+
+.mainContent {
+	float: right;
+	width: 600px;
+	padding:20px 0 20px 0;
+}
+.mainContent img {
+	margin:20px 0;
+}
+
+section {
+	width:950px;
+	margin:0 auto;
+	padding-bottom:25px;
+}
+
+button {
+	border-radius:12px;
+	padding:3px 12px;
+	background:white;
+	color:DeepPink;
+	text-transform:uppercase;
+	font-style:italic;
+	cursor:pointer;
+	margin:10px 0;
+	font-size:20px;
+}
+
+.picStyle {
+	border-radius:10px;
+	
+	border:1px solid #ece7d3;
+}
+
+.clearfloat {
+	clear:both;
+	height:0;
+	font-size: 1px;
+	line-height: 0px;
 }
