--- a/PrácticaFinal/templates/about.html
+++ b/PrácticaFinal/templates/about.html
@@ -9,6 +9,7 @@
   <a href="/about"><li> About </li></a>
   <a href="/{{user.username}}"><li>Página personal</li></a>
   <a href="/{{user.username}}/xml"><li>XML</li></a>
+  <a href="/json"><li>JSON pág ppal</li></a>
 </ul>
 {% endblock %}
 
