--- a/PrácticaFinal/templates/pagina_museo.html
+++ b/PrácticaFinal/templates/pagina_museo.html
@@ -9,6 +9,7 @@
   <a href="/{{user.username}}"><li>Página personal</li></a>
   <a href="/{{user.username}}/xml"><li>XML usuario</li></a>
   <a href="/rss"><li>Canal RSS </li></a>
+  <a href="/json"><li>JSON página principal</li></a>
 </ul>
 
 {% endblock %}
