Página principal xml

--- a/PrácticaFinal/templates/about.html
+++ b/PrácticaFinal/templates/about.html
@@ -10,6 +10,7 @@
   <a href="/{{user.username}}"><li>Página personal</li></a>
   <a href="/{{user.username}}/xml"><li>XML</li></a>
   <a href="/json"><li>JSON pág ppal</li></a>
+  <a href="/xml"><li>XML</li></a>
 </ul>
 {% endblock %}
 
